# CartManagment

./: .env.default  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 9b51ba77aaa0_initial.py
src/app/: LOGGING.py  config.py  containers.py
src/app/api/cli/: main.py
src/app/api/rest/: controllers.py  errors.py  main.py
src/app/api/rest/public/: controllers.py
src/app/api/rest/public/v1/: __init__.py  view_models.py
src/app/api/rest/public/v1/carts/: __init__.py  controllers.py
src/app/app_layer/interfaces/unit_of_work/: sql.py
src/app/app_layer/use_cases/carts/: create_cart.py  dto.py  retrieve_cart.py
src/app/domain/cart_notifications/: value_objects.py
src/app/domain/carts/: entities.py  value_objects.py
src/app/domain/interfaces/repositories/carts/: repo.py
src/app/infra/repositories/sqla/: base.py  carts.py  db.py  models.py
src/app/infra/unit_of_work/: sqla.py
