[tool.poetry]
name = "usermanagment"
version = "0.1.0"
description = ""
authors = ["MaxShpud <shpudeyko.02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.6.1"
python-json-logger = "^2.0.7"
dependency-injector = "^4.43.0"
sqlalchemy = "^2.0.36"
orjson = "^3.10.12"
alembic = "^1.14.0"
uvicorn = "^0.32.1"
typer = "^0.15.1"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
